@@ -251,7 +251,7 @@ CREATE TABLE MetadataValue
   metadata_value_id  INTEGER PRIMARY KEY,
   item_id       INTEGER REFERENCES Item(item_id),
   metadata_field_id  INTEGER REFERENCES MetadataFieldRegistry(metadata_field_id),
-  text_value VARCHAR2(4000),
+  text_value CLOB,
   text_lang  VARCHAR(64),
   place              INTEGER
 );
@@ -283,9 +283,9 @@ CREATE TABLE Community
   community_id      INTEGER PRIMARY KEY,
   name              VARCHAR2(128),
   short_description VARCHAR2(512),
-  introductory_text VARCHAR2(2000),
+  introductory_text CLOB,
   logo_bitstream_id INTEGER REFERENCES Bitstream(bitstream_id),
-  copyright_text    VARCHAR2(2000),
+  copyright_text    CLOB,
   side_bar_text     VARCHAR2(2000)
 );
 
@@ -297,12 +297,12 @@ CREATE TABLE Collection
   collection_id     INTEGER PRIMARY KEY,
   name              VARCHAR2(128),
   short_description VARCHAR2(512),
-  introductory_text VARCHAR2(2000),
+  introductory_text CLOB,
   logo_bitstream_id INTEGER REFERENCES Bitstream(bitstream_id),
   template_item_id  INTEGER REFERENCES Item(item_id),
   provenance_description  VARCHAR2(2000),
-  license           VARCHAR2(2000),
-  copyright_text    VARCHAR2(2000),
+  license           CLOB,
+  copyright_text    CLOB,
   side_bar_text     VARCHAR2(2000),
   workflow_step_1   INTEGER REFERENCES EPersonGroup( eperson_group_id ),
   workflow_step_2   INTEGER REFERENCES EPersonGroup( eperson_group_id ),
